Changes responsiveness of the main picture, changes background, and adds readme file

--- a/index.html
+++ b/index.html
@@ -9,27 +9,34 @@
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,600,600italic,700,300,300italic' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <div class="inner grid-container">
-      <div class="intro row">
-        <div class="col-5">
-          <h1>Evan Aarón Juárez Villarreal</h1>
-          <h3 class="sub">Web Developer | Student</h3>
+    <div class="outer">
+      <div class="inner grid-container">
+        <div class="intro row">
+          <div class="col-5">
+            <h1>Evan Aarón Juárez Villarreal</h1>
+            <h3 class="sub">Web Developer | Student</h3>
+          </div>
+          <div class="col-5">
+            <div class="profile"><img src="evan.jpg" alt="My image" height="340px" width="270px"></div>
+          </div>
+          <div class="col-10">
+            <h4>Who am I?</h4>
+            <p>I'm a young developer looking to learn new things daily. I have considerable experience on front-ending but I'd like to become a full stack developer. I consider myself a geek/gamer and a technology follower. Music is my fuel.</p>
+          </div>
         </div>
-        <div class="col-5">
-          <div class="profile"><img src="evan.jpg" alt="My image" height="370px" width="300px"></div>
-        </div>
-      </div>
-      <div class="divider"></div>
-      <div class="row">
-        <div class="col-3">
-          <p>Icalia Labs</p>
-        </div>
-        <div class="col-7">
-          <p>Ruby on Rails Intern</p>
-          <ul>
-            <li>Frontend developing</li>
-            <li></li>
-          </ul>
+        <div class="divider"></div>
+        <div class="row">
+          <h3>Experience</h3>
+          <div class="col-3">
+            <p>Icalia Labs</p>
+          </div>
+          <div class="col-7">
+            <p>Ruby on Rails Intern</p>
+            <ul>
+              <li>Frontend developing</li>
+              <li></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
