--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Evan Aarón Juárez Villarreal | Junior Web Developer</title>
+    <title>Evan Juárez | Junior Web Developer</title>
     <meta name="author" content="Evan Aarón Juárez Villarreal">
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="stylesheets/grid.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,600,600italic,700,300,300italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,600,600italic,700,300,300italic|Libre+Baskerville' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class="outer">
@@ -15,13 +15,14 @@
           <div class="col-5">
             <h1>Evan Aarón Juárez Villarreal</h1>
             <h3 class="sub">Web Developer | Student</h3>
+            <p>Social buttons</p>
           </div>
           <div class="col-5">
             <div class="profile"><img src="evan.jpg" alt="My image" height="340px" width="270px"></div>
           </div>
           <div class="col-10">
             <h4>Who am I?</h4>
-            <p>I'm a young developer looking to learn new things daily. I have considerable experience on front-ending but I'd like to become a full stack developer. I consider myself a geek/gamer and a technology follower. Music is my fuel.</p>
+            <p>I'm a young developer looking to learn new things daily. I have considerable experience on front-ending but I'd like to become a full stack developer. I consider myself a geek/gamer and a technology follower. Music is my fuel and I love algorithms.</p>
           </div>
         </div>
         <div class="divider"></div>
@@ -29,14 +30,46 @@
           <h3>Experience</h3>
           <div class="col-3">
             <p>Icalia Labs</p>
+            <h5>May/2015 - August/2015</h5>
           </div>
           <div class="col-7">
             <p>Ruby on Rails Intern</p>
             <ul>
-              <li>Frontend developing</li>
+              <li>Front-end development</li>
+              <li>Teamwork</li>
+              <li>Agile methodology</li>
+              <li>Database planification</li>
+              <li>Saas app development</li>
+            </ul>
+          </div>
+          <div class="col-3">
+            <p>Softseti</p>
+            <h5>February/2015 - May/2015</h5>
+          </div>
+          <div class="col-7">
+            <p>PHP Intern</p>
+            <ul>
+              <li>Front-end development</li>
+              <li>CodeIgniter use</li>
               <li></li>
             </ul>
           </div>
+          <div class="col-3">
+            <p>T-Systems</p>
+            <h5>September/2014 - December/2014</h5>
+          </div>
+          <div class="col-7">
+            <p>PHP Intern</p>
+            <ul>
+              <li>Front-end development</li>
+              <li>CodeIgniter use</li>
+              <li></li>
+            </ul>
+          </div>
+        </div>
+        <div class="divider"></div>
+        <div class="row">
+          <h3>Skills</h3>
         </div>
       </div>
     </div>
