Creates folder for images

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <p>Social buttons</p>
           </div>
           <div class="col-5">
-            <div class="profile"><img src="evan.jpg" alt="My image" height="340px" width="270px"></div>
+            <div class="profile"><img src="images/evan.jpg" alt="My image" height="340px" width="270px"></div>
           </div>
           <div class="col-10">
             <h4>Who am I?</h4>
