Changes meta tag of the index page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Evan Juárez | Junior Web Developer</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta name="author" content="Evan Aarón Juárez Villarreal">
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="stylesheets/grid.css">
