Completes col width rules in small windows

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="intro row">
           <div class="col-5">
             <h1>Evan Aarón Juárez Villarreal</h1>
-            <h3 class="sub">Web Developer | Student</h3>
+            <h3 class="sub">Web Developer | CS Student</h3>
             <p>Social buttons</p>
           </div>
           <div class="col-5">
@@ -26,11 +26,11 @@
             <p>I'm a young developer looking to learn new things daily. I have considerable experience on front-ending but I'd like to become a full stack developer. I consider myself a geek/gamer and a technology follower. Music is my fuel and I love algorithms.</p>
           </div>
         </div>
-        <div class="divider"></div>
+        <hr class="divider">
         <div class="row">
-          <h3>Experience</h3>
+          <h2>Experience</h2>
           <div class="col-3">
-            <p>Icalia Labs</p>
+            <h4>Icalia Labs</h4>
             <h5>May/2015 - August/2015</h5>
           </div>
           <div class="col-7">
@@ -40,11 +40,11 @@
               <li>Teamwork</li>
               <li>Agile methodology</li>
               <li>Database planification</li>
-              <li>Saas app development</li>
+              <li>SaaS app development</li>
             </ul>
           </div>
           <div class="col-3">
-            <p>Softseti</p>
+            <h4>Softseti</h4>
             <h5>February/2015 - May/2015</h5>
           </div>
           <div class="col-7">
@@ -52,25 +52,25 @@
             <ul>
               <li>Front-end development</li>
               <li>CodeIgniter use</li>
-              <li></li>
+              <li>Sales system development</li>
             </ul>
           </div>
           <div class="col-3">
-            <p>T-Systems</p>
+            <h4>T-Systems</h4>
             <h5>September/2014 - December/2014</h5>
           </div>
           <div class="col-7">
-            <p>PHP Intern</p>
+            <p>Design Intern</p>
             <ul>
-              <li>Front-end development</li>
-              <li>CodeIgniter use</li>
-              <li></li>
+              <li>Design of a web and a mobile application</li>
+              <li>Basic Android development</li>
             </ul>
           </div>
         </div>
-        <div class="divider"></div>
+        <hr class="divider">
         <div class="row">
-          <h3>Skills</h3>
+          <h2>Skills</h2>
+
         </div>
       </div>
     </div>
