Defines colors for social buttons

--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
           <div class="col-5">
             <h1>Evan Aarón Juárez Villarreal</h1>
             <h3 class="sub">Web Developer | CS Student</h3>
-            <p>Social buttons</p>
+            <div class="row">
+              <div class="col-3">
+                <a href="" class="button facebook">Facebook</a>
+              </div>
+              <div class="col-3">
+                <a href="" class="button twitter">Twitter</a>
+              </div>
+              <div class="col-3">
+                <a href="" class="button github">Github</a>
+              </div>
+            </div>
           </div>
           <div class="col-5">
             <div class="profile"><img src="images/evan.jpg" alt="My image" height="340px" width="270px"></div>
