--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="stylesheets/grid.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,600,600italic,700,300,300italic|Libre+Baskerville' rel='stylesheet' type='text/css'>
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
@@ -18,16 +19,10 @@
           <div class="col-5">
             <h1>Evan Aarón Juárez Villarreal</h1>
             <h3 class="sub">Web Developer | CS Student</h3>
-            <div class="row">
-              <div class="col-3">
-                <a href="" class="button facebook">Facebook</a>
-              </div>
-              <div class="col-3">
-                <a href="" class="button twitter">Twitter</a>
-              </div>
-              <div class="col-3">
-                <a href="" class="button github">Github</a>
-              </div>
+            <div>
+              <a href="https://www.facebook.com/evan.juarezvillarreal" class="social-button facebook col-3" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
+              <a href="https://www.twitter.com/navenull" class="social-button twitter col-3" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+              <a href="https://www.github.com/EvanJuv" class="social-button github col-3" target="_blank"><i class="fa fa-github fa-2x"></i></a>         
             </div>
           </div>
           <div class="col-5">
@@ -42,7 +37,7 @@
         <div class="row">
           <h2>Experience</h2>
           <div class="col-3">
-            <p style="font-style: none;"><strong>Icalia Labs</strong></p>
+            <h4>Icalia Labs</h4>
             <h5>May/2015 - August/2015</h5>
           </div>
           <div class="col-7">
